instalacao ng bootstrap

--- a/angular.json
+++ b/angular.json
@@ -35,6 +35,7 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -101,5 +102,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "ee664e2c-fc28-4bb7-81c7-f51eb5a09947"
   }
 }
